tests/fixtures/negative/resource-cost/RecyclerAdapterStableIdsDefault.kt
package fixtures.negative.resourcecost

import androidx.recyclerview.widget.RecyclerView

class StableAdapter : RecyclerView.Adapter<RecyclerView.ViewHolder>() {
    init {
        setHasStableIds(true)
    }

    override fun onCreateViewHolder(parent: android.view.ViewGroup, viewType: Int): RecyclerView.ViewHolder {
        TODO()
    }

    override fun onBindViewHolder(holder: RecyclerView.ViewHolder, position: Int) {
        TODO()
    }

    override fun getItemCount(): Int = 0

    override fun getItemId(position: Int): Long = position.toLong()
}
